include/codata_constants_2018.h

ADD_IMPORT extern const int YEAR;
ADD_IMPORT extern const double ALPHA_PARTICLE_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ALPHA_PARTICLE_MASS;/**< kg */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_MASS;/**< kg */
ADD_IMPORT extern const double ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double ALPHA_PARTICLE_MASS_IN_U;/**< u */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_MASS_IN_U;/**< u */
ADD_IMPORT extern const double ALPHA_PARTICLE_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double ALPHA_PARTICLE_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double U_ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double ANGSTROM_STAR;/**< m */
ADD_IMPORT extern const double U_ANGSTROM_STAR;/**< m */
ADD_IMPORT extern const double ATOMIC_MASS_CONSTANT;/**< kg */
ADD_IMPORT extern const double U_ATOMIC_MASS_CONSTANT;/**< kg */
ADD_IMPORT extern const double ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY;/**< C^3 m^3 J^-2 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY;/**< C^3 m^3 J^-2 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY;/**< C^4 m^4 J^-3 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY;/**< C^4 m^4 J^-3 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_ACTION;/**< J s */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_ACTION;/**< J s */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_CHARGE;/**< C */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_CHARGE;/**< C */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_CHARGE_DENSITY;/**< C m^-3 */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_CHARGE_DENSITY;/**< C m^-3 */
ADD_IMPORT extern const double ATOMIC_UNIT_OF_CURRENT;/**< A */
ADD_IMPORT extern const double U_ATOMIC_UNIT_OF_CURRENT;/**< A */