src/codata_constants_latest.f90

!> @file
!> @brief Constants latest - autogenerated.

!> @brief Constants latest - autogenerated.
module codata__constants_latest
use iso_fortran_env, only: dp=>real64, int32
use iso_c_binding, only: cdp=>c_double, c_int
implicit none
private
 
integer(int32), parameter, public :: YEAR = 2018   !< Year of codata constants
integer(c_int), protected, public, bind(C,name="YEAR") ::capi_YEAR = YEAR !< C API Year of codata constants

real(dp), parameter, public :: ALPHA_PARTICLE_ELECTRON_MASS_RATIO=7294.29954142_dp !< dimensionless
real(dp), parameter, public :: U_ALPHA_PARTICLE_ELECTRON_MASS_RATIO=0.00000024_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ALPHA_PARTICLE_ELECTRON_MASS_RATIO"):: &
capi_001=ALPHA_PARTICLE_ELECTRON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ALPHA_PARTICLE_ELECTRON_MASS_RATIO") :: &
capi_U_001=U_ALPHA_PARTICLE_ELECTRON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: ALPHA_PARTICLE_MASS=6.6446573357e-27_dp !< kg
real(dp), parameter, public :: U_ALPHA_PARTICLE_MASS=0.0000000020e-27_dp !< kg

real(cdp), protected, public, bind(C,name="ALPHA_PARTICLE_MASS"):: &
capi_002=ALPHA_PARTICLE_MASS !< C API kg
real(cdp), protected, public, bind(C,name="U_ALPHA_PARTICLE_MASS") :: &
capi_U_002=U_ALPHA_PARTICLE_MASS !< C API kg

real(dp), parameter, public :: ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT=5.9719201914e-10_dp !< J
real(dp), parameter, public :: U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT=0.0000000018e-10_dp !< J

real(cdp), protected, public, bind(C,name="ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT"):: &
capi_003=ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT !< C API J
real(cdp), protected, public, bind(C,name="U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT") :: &
capi_U_003=U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT !< C API J

real(dp), parameter, public :: ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV=3727.3794066_dp !< MeV
real(dp), parameter, public :: U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV=0.0000011_dp !< MeV

real(cdp), protected, public, bind(C,name="ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV"):: &
capi_004=ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV !< C API MeV
real(cdp), protected, public, bind(C,name="U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
capi_U_004=U_ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV !< C API MeV

real(dp), parameter, public :: ALPHA_PARTICLE_MASS_IN_U=4.001506179127_dp !< u
real(dp), parameter, public :: U_ALPHA_PARTICLE_MASS_IN_U=0.000000000063_dp !< u

real(cdp), protected, public, bind(C,name="ALPHA_PARTICLE_MASS_IN_U"):: &
capi_005=ALPHA_PARTICLE_MASS_IN_U !< C API u
real(cdp), protected, public, bind(C,name="U_ALPHA_PARTICLE_MASS_IN_U") :: &
capi_U_005=U_ALPHA_PARTICLE_MASS_IN_U !< C API u

real(dp), parameter, public :: ALPHA_PARTICLE_MOLAR_MASS=4.0015061777e-3_dp !< kg mol^-1
real(dp), parameter, public :: U_ALPHA_PARTICLE_MOLAR_MASS=0.0000000012e-3_dp !< kg mol^-1

real(cdp), protected, public, bind(C,name="ALPHA_PARTICLE_MOLAR_MASS"):: &
capi_006=ALPHA_PARTICLE_MOLAR_MASS !< C API kg mol^-1
real(cdp), protected, public, bind(C,name="U_ALPHA_PARTICLE_MOLAR_MASS") :: &
capi_U_006=U_ALPHA_PARTICLE_MOLAR_MASS !< C API kg mol^-1

real(dp), parameter, public :: ALPHA_PARTICLE_PROTON_MASS_RATIO=3.97259969009_dp !< dimensionless
real(dp), parameter, public :: U_ALPHA_PARTICLE_PROTON_MASS_RATIO=0.00000000022_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ALPHA_PARTICLE_PROTON_MASS_RATIO"):: &
capi_007=ALPHA_PARTICLE_PROTON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ALPHA_PARTICLE_PROTON_MASS_RATIO") :: &
capi_U_007=U_ALPHA_PARTICLE_PROTON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS=4.001506179127_dp !< dimensionless
real(dp), parameter, public :: U_ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS=0.000000000063_dp !< dimensionless

real(cdp), protected, public, bind(C,name="ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS"):: &
capi_008=ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS") :: &
capi_U_008=U_ALPHA_PARTICLE_RELATIVE_ATOMIC_MASS !< C API dimensionless

real(dp), parameter, public :: ANGSTROM_STAR=1.00001495e-10_dp !< m
real(dp), parameter, public :: U_ANGSTROM_STAR=0.00000090e-10_dp !< m

real(cdp), protected, public, bind(C,name="ANGSTROM_STAR"):: &
capi_009=ANGSTROM_STAR !< C API m
real(cdp), protected, public, bind(C,name="U_ANGSTROM_STAR") :: &
capi_U_009=U_ANGSTROM_STAR !< C API m

real(dp), parameter, public :: ATOMIC_MASS_CONSTANT=1.66053906660e-27_dp !< kg
real(dp), parameter, public :: U_ATOMIC_MASS_CONSTANT=0.00000000050e-27_dp !< kg

real(cdp), protected, public, bind(C,name="ATOMIC_MASS_CONSTANT"):: &
capi_010=ATOMIC_MASS_CONSTANT !< C API kg
real(cdp), protected, public, bind(C,name="U_ATOMIC_MASS_CONSTANT") :: &
capi_U_010=U_ATOMIC_MASS_CONSTANT !< C API kg

real(dp), parameter, public :: ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT=1.49241808560e-10_dp !< J
real(dp), parameter, public :: U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT=0.00000000045e-10_dp !< J

real(cdp), protected, public, bind(C,name="ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT"):: &
capi_011=ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT !< C API J
real(cdp), protected, public, bind(C,name="U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT") :: &
capi_U_011=U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT !< C API J

real(dp), parameter, public :: ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV=931.49410242_dp !< MeV
real(dp), parameter, public :: U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV=0.00000028_dp !< MeV

real(cdp), protected, public, bind(C,name="ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV"):: &
capi_012=ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV !< C API MeV
real(cdp), protected, public, bind(C,name="U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV") :: &
capi_U_012=U_ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV !< C API MeV

real(dp), parameter, public :: ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP=9.3149410242e8_dp !< eV
real(dp), parameter, public :: U_ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP=0.0000000028e8_dp !< eV

real(cdp), protected, public, bind(C,name="ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP"):: &
capi_013=ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP !< C API eV
real(cdp), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP") :: &
capi_U_013=U_ATOMIC_MASS_UNIT_ELECTRON_VOLT_RELATIONSHIP !< C API eV

real(dp), parameter, public :: ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP=3.4231776874e7_dp !< E_h
real(dp), parameter, public :: U_ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP=0.0000000010e7_dp !< E_h

real(cdp), protected, public, bind(C,name="ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP"):: &
capi_014=ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP !< C API E_h
real(cdp), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP") :: &
capi_U_014=U_ATOMIC_MASS_UNIT_HARTREE_RELATIONSHIP !< C API E_h

real(dp), parameter, public :: ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP=2.25234271871e23_dp !< Hz
real(dp), parameter, public :: U_ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP=0.00000000068e23_dp !< Hz

real(cdp), protected, public, bind(C,name="ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP"):: &
capi_015=ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP !< C API Hz
real(cdp), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP") :: &
capi_U_015=U_ATOMIC_MASS_UNIT_HERTZ_RELATIONSHIP !< C API Hz

real(dp), parameter, public :: ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP=7.5130066104e14_dp !< m^-1
real(dp), parameter, public :: U_ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP=0.0000000023e14_dp !< m^-1

real(cdp), protected, public, bind(C,name="ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP"):: &
capi_016=ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP !< C API m^-1
real(cdp), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP") :: &
capi_U_016=U_ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP !< C API m^-1

real(dp), parameter, public :: ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP=1.49241808560e-10_dp !< J
real(dp), parameter, public :: U_ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP=0.00000000045e-10_dp !< J

real(cdp), protected, public, bind(C,name="ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP"):: &
capi_017=ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP !< C API J
real(cdp), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP") :: &
capi_U_017=U_ATOMIC_MASS_UNIT_JOULE_RELATIONSHIP !< C API J

real(dp), parameter, public :: ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP=1.08095401916e13_dp !< K
real(dp), parameter, public :: U_ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP=0.00000000033e13_dp !< K

real(cdp), protected, public, bind(C,name="ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP"):: &
capi_018=ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP !< C API K
real(cdp), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP") :: &
capi_U_018=U_ATOMIC_MASS_UNIT_KELVIN_RELATIONSHIP !< C API K

real(dp), parameter, public :: ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP=1.66053906660e-27_dp !< kg
real(dp), parameter, public :: U_ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP=0.00000000050e-27_dp !< kg

real(cdp), protected, public, bind(C,name="ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP"):: &
capi_019=ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP !< C API kg
real(cdp), protected, public, bind(C,name="U_ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP") :: &
capi_U_019=U_ATOMIC_MASS_UNIT_KILOGRAM_RELATIONSHIP !< C API kg

real(dp), parameter, public :: ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY=3.2063613061e-53_dp !< C^3 m^3 J^-2
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY=0.0000000015e-53_dp !< C^3 m^3 J^-2

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY"):: &
capi_020=ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY !< C API C^3 m^3 J^-2
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY") :: &
capi_U_020=U_ATOMIC_UNIT_OF_1ST_HYPERPOLARIZABILITY !< C API C^3 m^3 J^-2

real(dp), parameter, public :: ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY=6.2353799905e-65_dp !< C^4 m^4 J^-3
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY=0.0000000038e-65_dp !< C^4 m^4 J^-3

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY"):: &
capi_021=ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY !< C API C^4 m^4 J^-3
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY") :: &
capi_U_021=U_ATOMIC_UNIT_OF_2ND_HYPERPOLARIZABILITY !< C API C^4 m^4 J^-3

real(dp), parameter, public :: ATOMIC_UNIT_OF_ACTION=1.054571817e-34_dp !< J s
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_ACTION=0.0_dp !< J s

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_ACTION"):: &
capi_022=ATOMIC_UNIT_OF_ACTION !< C API J s
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_ACTION") :: &
capi_U_022=U_ATOMIC_UNIT_OF_ACTION !< C API J s

real(dp), parameter, public :: ATOMIC_UNIT_OF_CHARGE=1.602176634e-19_dp !< C
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_CHARGE=0.0_dp !< C

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_CHARGE"):: &
capi_023=ATOMIC_UNIT_OF_CHARGE !< C API C
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_CHARGE") :: &
capi_U_023=U_ATOMIC_UNIT_OF_CHARGE !< C API C

real(dp), parameter, public :: ATOMIC_UNIT_OF_CHARGE_DENSITY=1.08120238457e12_dp !< C m^-3
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_CHARGE_DENSITY=0.00000000049e12_dp !< C m^-3

real(cdp), protected, public, bind(C,name="ATOMIC_UNIT_OF_CHARGE_DENSITY"):: &
capi_024=ATOMIC_UNIT_OF_CHARGE_DENSITY !< C API C m^-3
real(cdp), protected, public, bind(C,name="U_ATOMIC_UNIT_OF_CHARGE_DENSITY") :: &
capi_U_024=U_ATOMIC_UNIT_OF_CHARGE_DENSITY !< C API C m^-3

real(dp), parameter, public :: ATOMIC_UNIT_OF_CURRENT=6.623618237510e-3_dp !< A
real(dp), parameter, public :: U_ATOMIC_UNIT_OF_CURRENT=0.000000000013e-3_dp !< A
